--- a/SmartShopMobileApp/Views/VoucherView.xaml
+++ b/SmartShopMobileApp/Views/VoucherView.xaml
@@ -59,7 +59,7 @@
                                                 <Label Text="{Binding CartCreationDate}" Margin="10,0,0,0" FontFamily="Poppins-Bold" TextColor="#2B0B98" FontSize="16" />
                                             </StackLayout>
                                             <StackLayout Orientation="Horizontal" >
-                                                <Label Text="Total value:" Margin="10,0,0,0"  TextColor="Gray" FontSize="16"/>
+                                                <Label Text="Cart value:" Margin="10,0,0,0"  TextColor="Gray" FontSize="16"/>
                                                 <Label Text="{Binding TotalAmount}" Margin="10,0,0,0"  TextColor="Gray" FontSize="16" />
                                                 <Label Text=" lei" Margin="0,0,0,0" TextColor="Gray" FontSize="16" />
                                             </StackLayout>
@@ -68,7 +68,7 @@
 
                                         </StackLayout>
                                         <StackLayout Grid.Column="1" Orientation="Horizontal" HorizontalOptions="EndAndExpand" >
-                                            <Label Text="{Binding ValueModification}" Margin="0,13,10,0" FontAttributes="Bold" TextColor="Green" FontSize="16" />
+                                            <Label Text="{Binding ValueModification}" Margin="0,13,10,0" FontAttributes="Bold" TextColor="{Binding TextColor}" FontSize="16" />
 
                                         </StackLayout>
 
