--- a/SmartShopMobileApp/Views/ShoppingCartView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartView.xaml
@@ -69,7 +69,7 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <StackLayout Margin="0,-10,10,0"
+        <StackLayout Margin="0,15,10,0"
                      Orientation="Horizontal" 
                      VerticalOptions="CenterAndExpand" 
                      HorizontalOptions="CenterAndExpand">
