--- a/SmartShopMobileApp/AppShell.xaml
+++ b/SmartShopMobileApp/AppShell.xaml
@@ -10,7 +10,7 @@
         <ShellContent Title="Home"  
                       Icon="home.png"
                       ContentTemplate="{DataTemplate local:HomeView}" />
-        <ShellContent Title="Scan product"  
+        <!--<ShellContent Title="Scan product"  
                       Icon="scanner.png"
                       ContentTemplate="{DataTemplate local:BarcodeScannerView}" />
         <ShellContent Title="History"  
@@ -21,7 +21,7 @@
                       ContentTemplate="{DataTemplate local:ShoppingCartView}" />
         <ShellContent Title="Profile"  
                       Icon="profile.png"
-                      ContentTemplate="{DataTemplate local:ProfileView}" />
+                      ContentTemplate="{DataTemplate local:ProfileView}" />-->
     </TabBar>
 
 </Shell>
