--- a/SmartShopMobileApp/Views/HistoryAndStatisticsView.xaml
+++ b/SmartShopMobileApp/Views/HistoryAndStatisticsView.xaml
@@ -42,13 +42,13 @@
                     </Picker>
                 </StackLayout>
 
-                <Button Text="Filtrare" Command="{Binding FilterShoppingCartsCommand}"/>
+                <Button Text="Filter" Command="{Binding FilterShoppingCartsCommand}"/>
             </StackLayout>
         </Grid>
         <Button Text="{x:Static icon:IconFont.Filter_alt}" Style="{StaticResource GoogleFont}" TextColor="#2B0B98" BackgroundColor="Transparent" Command="{Binding ShowFiltersCommand}" HorizontalOptions="StartAndExpand" />
         <ScrollView>
 
-            <CollectionView x:Name="ShoppingCartsList" ItemsSource="{Binding ShoppingCarts, Mode=TwoWay}"  HeightRequest="300">
+            <CollectionView x:Name="ShoppingCartsList" ItemsSource="{Binding ShoppingCarts, Mode=TwoWay}"  HeightRequest="900">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:ShoppingCartDTO">
                         <Grid Padding="10,5,10,5">
