--- a/SmartShopMobileApp/Views/BarcodeScannerView.xaml
+++ b/SmartShopMobileApp/Views/BarcodeScannerView.xaml
@@ -42,7 +42,7 @@
                         HorizontalOptions="EndAndExpand"
                         Command="{Binding AddProductToCartCommand}"
                         CommandParameter="{Binding ProductName}"/>
-                <Button Text="Scan object"
+                <Button Text="detect object"
                         TextTransform="None"
                         CornerRadius="5"
                         FontSize="15"
