--- a/SmartShopMobileApp/Views/ShoppingCartItemsView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartItemsView.xaml
@@ -22,7 +22,7 @@
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
 
-                                    <Image Source="{Binding ImageUrl}" HeightRequest="100" WidthRequest="100" />
+                                    <Image Source="{Binding ImageSource}" HeightRequest="100" WidthRequest="100" />
 
                                     <StackLayout Grid.Column="1" VerticalOptions="Center">
                                         <Label Text="{Binding Name}" Margin="10,0,0,0" FontFamily="Poppins-Bold" TextColor="#2B0B98" FontSize="16" />
