--- a/SmartShopMobileApp/Views/MonthlySpendingsView.xaml
+++ b/SmartShopMobileApp/Views/MonthlySpendingsView.xaml
@@ -8,7 +8,9 @@
         <VerticalStackLayout>
             <Label Text="Your spendings in the last 4 months:"  Padding="10,20,10,20" TextColor="#2B0B98" FontSize="16"></Label>
             <micro:ChartView x:Name="chartView" HeightRequest="300" WidthRequest="500"/>
-            <micro:ChartView x:Name="chartView1" HeightRequest="300" WidthRequest="300" Margin="50,20,0,0"/>
+
+            <Label Text="Your spendings by categories - Current month:"  Padding="10,50,10,0" TextColor="#2B0B98" FontSize="16"></Label>
+            <micro:ChartView x:Name="chartView1" HeightRequest="300" WidthRequest="370" Margin="5,-2,0,0"/>
 
         </VerticalStackLayout>
     </ScrollView>
