Added the button to see the statistics(spendings) page

--- a/SmartShopMobileApp/Views/HistoryAndStatisticsView.xaml
+++ b/SmartShopMobileApp/Views/HistoryAndStatisticsView.xaml
@@ -111,6 +111,6 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
         </ScrollView>
-
+        <Button x:Name="payButton" Command="{Binding ViewStatisticsCommand}" Text="View statistics" FontSize="18" Margin="30,10" />
     </VerticalStackLayout>
 </ContentPage>
