--- a/SmartShopMobileApp/AppShell.xaml
+++ b/SmartShopMobileApp/AppShell.xaml
@@ -15,7 +15,7 @@
                       ContentTemplate="{DataTemplate local:BarcodeScannerView}" />
         <ShellContent Title="History"  
                       Icon="transaction.png"
-                      ContentTemplate="{DataTemplate local:MonthlySpendingsView}" />
+                      ContentTemplate="{DataTemplate local:HistoryAndStatisticsView}" />
         <ShellContent Title="My cart"  
                       Icon="cart.png"
                       ContentTemplate="{DataTemplate local:ShoppingCartView}" />
