Implemented log in and sign up (work in progress)

--- a/SmartShopMobileApp/Views/LogInView.xaml
+++ b/SmartShopMobileApp/Views/LogInView.xaml
@@ -20,17 +20,20 @@
             </Grid.ColumnDefinitions>
             <Entry Grid.Row="2"
                Grid.Column="1"
+               Text="{Binding Email}"
                Placeholder="emailAddress"/>
             <Entry Grid.Row="3"
                Grid.Column="1"
+               Text="{Binding Password}"
                Placeholder="Password"
-               IsPassword="True"
-               AutomationId="passwordEntry"/>
+               IsPassword="True"/>
             <Button Grid.Row="4"
                 Grid.Column="1"
                 Text="Log in"
-                AutomationId="loginButton"
                 Command="{Binding LogInCommand}"/>
         </Grid>
+        <Label Text="Don't have an account? Create one:" Margin="10,20,10,0" FontSize="Medium" HorizontalOptions="Center"/>
+
+        <Button Text="Sign Up" Command="{Binding OpenSignUpPageCommand}" Margin="0,10,0,0" HorizontalOptions="Center"/>
     </VerticalStackLayout>
 </ContentPage>
