--- a/SmartShopMobileApp/Views/SignUpView.xaml
+++ b/SmartShopMobileApp/Views/SignUpView.xaml
@@ -2,14 +2,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SmartShopMobileApp.Views.SignUpView"
+             xmlns:viewModels="clr-namespace:SmartShopMobileApp.ViewModels" 
              Title="SignUpView">
     <VerticalStackLayout>
             <ScrollView>
                 <StackLayout Margin="20">
-                    <Entry Placeholder="First Name" x:Name="firstNameEntry"/>
-                    <Entry Placeholder="Last Name" x:Name="lastNameEntry"/>
-                    <Entry Placeholder="Email Address" x:Name="emailEntry"/>
-                    <Entry Placeholder="Password" IsPassword="True" x:Name="passwordEntry"/>
+                    <Entry Placeholder="First Name" Text="{Binding FirstName}"/>
+                    <Entry Placeholder="Last Name" Text="{Binding LastName}"/>
+                    <Entry Placeholder="Email Address" Text="{Binding Email}"/>
+                <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password}"/>
                     <DatePicker x:Name="birthDateDatePicker"/>
                     <Button Text="Sign Up" Command="{Binding SignUpCommand}"/>
                 </StackLayout>
