--- a/SmartShopMobileApp/Views/MonthlySpendingsView.xaml
+++ b/SmartShopMobileApp/Views/MonthlySpendingsView.xaml
@@ -9,13 +9,15 @@
             <Label Text="Your spendings in the last 3 months:"  Padding="10,20,10,20" TextColor="#2B0B98" FontSize="16"></Label>
             <micro:ChartView x:Name="chartView" HeightRequest="300" WidthRequest="500"/>
 
-            <StackLayout>
-                <Label Text="Select a month:" Margin="10"/>
-                <Picker x:Name="monthPicker" Margin="10" SelectedIndexChanged="MonthPicker_SelectedIndexChanged"/>
-                <Label x:Name="chartLabel" Margin="10"/>
+            <Label Text="Your spendings by categories:"  Padding="10,50,10,20" TextColor="#2B0B98" FontSize="16"></Label>
+            <StackLayout Margin="10,0,10,0">
+                <Label Text="Select a month:" />
+                <Picker x:Name="monthPicker"  SelectedIndexChanged="Picker_SelectedIndexChanged"/>
+                <Label Text="Select a year:" />
+                <Picker x:Name="yearPicker"  SelectedIndexChanged="Picker_SelectedIndexChanged"/>
+                <Label x:Name="chartLabel" />
                 <micro:ChartView x:Name="chartView1" HeightRequest="300" WidthRequest="370" Margin="10"/>
             </StackLayout>
-
 
 
         </VerticalStackLayout>
