--- a/SmartShopMobileApp/App.xaml
+++ b/SmartShopMobileApp/App.xaml
@@ -15,7 +15,14 @@
                         <Setter Property="BackgroundColor" Value="#FFFFFF" />
                         <Setter Property="HeightRequest" Value="90" />
                     </Style>
-                    
+                    <Style x:Key="OffersFrameStyle" TargetType="Frame">
+                        <Setter Property="HeightRequest" Value="200" />
+                        <Setter Property="WidthRequest" Value="170" />
+                        <Setter Property="Margin" Value="10, 0, 10, -20" />
+                        <Setter Property="Padding" Value="2, 2, 2, 30" />
+                        <Setter Property="CornerRadius" Value="5" />
+                        <Setter Property="BackgroundColor" Value="Transparent" />
+                    </Style>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
