--- a/SmartShopMobileApp/Views/HomeView.xaml
+++ b/SmartShopMobileApp/Views/HomeView.xaml
@@ -52,31 +52,33 @@
             IsVisible="{Binding IsCurrentOffersVisible}"
             Text="Current offers: "
             TextColor="#1C698A" />
-
+        <ScrollView HeightRequest="300">
         <CollectionView
-                        Margin="7,0,7,0"
-                        ItemsSource="{Binding CurrentOffers}">
+        Margin="7,0,7,0"
+        ItemsSource="{Binding CurrentOffers}">  
 
             <CollectionView.ItemsLayout>
                 <GridItemsLayout
-                            HorizontalItemSpacing="10"
-                            Orientation="Vertical"
-                            Span="2"
-                            VerticalItemSpacing="10" />
+            HorizontalItemSpacing="10"
+            Orientation="Vertical"
+            Span="2"
+            VerticalItemSpacing="10" />
             </CollectionView.ItemsLayout>
 
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="model:OfferDTO">
                     <Frame
-                                    BackgroundColor="Transparent"
-                                    BorderColor="#dee3e3"
-                                    CornerRadius="5"
-                                    HasShadow="True"
-                                    IsClippedToBounds="True"
-                                    Style="{StaticResource NewsFrameStyle}">
+                BackgroundColor="Transparent"
+                BorderColor="#dee3e3"
+                CornerRadius="5"
+                HasShadow="True"
+                IsClippedToBounds="True"
+                Style="{StaticResource OffersFrameStyle}">
+
                         <Grid Margin="-20,-30,-20,-20">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
@@ -84,28 +86,78 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <Image
-                                            Grid.Row="0"
-                                            Margin="5"
-                                            Source="{Binding Product.ImageUrl}"
-                                            WidthRequest="200" />
+                        Grid.Row="0"
+                        Margin="0"
+                        Source="{Binding Product.ImageSource}"
+                        WidthRequest="200" />
+                                <Button
+                                    HeightRequest="20"
+                                    WidthRequest="30"
+                                    HorizontalOptions="EndAndExpand"
+                                    VerticalOptions="StartAndExpand"
+                                    Margin="0,30,20,0"
+                                    Text="{Binding OldPrice}"
+                                BackgroundColor="Red"/>
+                                <Button
+                                    HeightRequest="20"
+                                    WidthRequest="30"
+                                    HorizontalOptions="EndAndExpand"
+                                    VerticalOptions="StartAndExpand"
+                                    Margin="0,30,20,0"
+                                    Text="{Binding NewPrice}"
+                                BackgroundColor="Green"/>
+                                <Label
+                        Grid.Row="1"
+                        Margin="25,0,0,0"
+                        FontFamily="Montserrat"
+                        FontSize="13"
+                        FontAttributes="Bold"
+                        Text="{Binding Product.Name}"
+                        TextColor="#1C698A" />
                             <Label
-                                            Grid.Row="1"
-                                            Margin="6,0,0,0"
-                                            FontFamily="Montserrat"
-                                            FontSize="12"
-                                            Text="{Binding }"
-                                            TextColor="#1C698A" />
+                        Grid.Row="2"
+                        Margin="25,0,0,0"
+                        FontFamily="Montserrat"
+                        FontSize="10"
+                        Text="{Binding OfferPercentage, StringFormat='Discount: -{0}%'}"
+                        TextColor="Red" />
+                            
                             <Label
-                                            Grid.Row="2"
-                                            Margin="7,0,0,12"
-                                            FontFamily="Montserrat"
-                                            FontSize="9"
-                                            Text="{Binding DateAndTimePeriod}"
-                                            TextColor="#1C698A" />
+                        Grid.Row="3"
+                        Margin="25,0,0,12"
+                        FontFamily="Montserrat"
+                        FontSize="10"
+                        Text="{Binding OfferStartDate, StringFormat='{0:dd-MM-yyyy}'}"
+                        TextColor="#1C698A" />
+                           
+                            <Label
+                        Grid.Row="3"
+                        Margin="85,0,0,12"
+                        FontFamily="Montserrat"
+                        FontSize="10"
+                        Text="{Binding OfferStartDate, StringFormat='{0:dd-MM-yyyy}'}"
+                        TextColor="#1C698A" />
+
+
+                                <Label
+                        Grid.Row="3"
+                        Margin="85,0,0,12"
+                        FontFamily="Montserrat"
+                        FontSize="10"
+                        Text="{Binding OfferStartDate, StringFormat='{0:dd-MM-yyyy}'}"
+                        TextColor="#1C698A" />
+
+                                <Image
+                        HeightRequest="20"
+                        Grid.Row="1"
+                        Margin="80,2,0,0"
+                        Source="{Binding Supermarket.ImageUrl}" />
+
                         </Grid>
                     </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
+        </ScrollView>
     </VerticalStackLayout>
 </ContentPage>
